--- a/paper/Zaslavsky.tex
+++ b/paper/Zaslavsky.tex
@@ -208,6 +208,12 @@ In terms of rainbow forests, this rewrites as
 To further simplify this expression, we now need to count the number of rainbow forests with a prescribed number of colored edges. We deal with this problem by extending the colored Pr\"{u}fer code of Theorem \ref{thm:verticesRefinedMultiBraidArrangement}
 
 
+\begin{remark}
+Bad news : I tried to first understand  how Pr\"{u}fer code works on (non colored) forests rooted in the minimal label of each connected component but no multiplicative formula is known (so the Prufer type proof does not seem to work either).
+We get the sequence \OEIS{A138464}.¨
+\end{remark}
+
+
 
 \bibliographystyle{alpha}
 \bibliography{diagonalsPermutahedra}
