--- a/paper/Zaslavsky.tex
+++ b/paper/Zaslavsky.tex
@@ -195,14 +195,14 @@ Finally, we get:
 \begin{theorem}
 The M\"obius polynomial of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is given by
 \[
-\mobPol[\multiBraidArrangement]=\sum_{G \in \forestPoset} y^{n-\ell n - 1 + \sum_{i=1}^\ell |G_i|} x^{(n-1)(1-\ell)} \prod_{i=1}^{\ell} P_{|G_i|}(x).
+\mobPol[\multiBraidArrangement]=x^{(n-1)(1-\ell)} \sum_{G \in \forestPoset} y^{n-\ell n - 1 + \sum_{i=1}^\ell |G_i|}  \prod_{i=1}^{\ell} P_{|G_i|}(x).
 \]
 \end{theorem}
 
 In terms of rainbow forests, this rewrites as
 
 \begin{equation}
-\mobPol[\multiBraidArrangement]=\sum_{G \in \rainbowForests} y^{n- 1 + |E(G)|} x^{(n-1)(1-\ell)} \prod_{i=1}^{\ell} P_{n-|E(G,i)|}(x)
+\mobPol[\multiBraidArrangement]=x^{(n-1)(1-\ell)} \sum_{G \in \rainbowForests} y^{n- 1 + |E(G)|}  \prod_{i=1}^{\ell} P_{n-|E(G,i)|}(x)
 \end{equation}
 
 To further simplify this expression, we now need to count the number of rainbow forests with a prescribed number of colored edges. We deal with this problem by extending the colored Pr\"{u}fer code of Theorem \ref{thm:verticesRefinedMultiBraidArrangement}
@@ -210,7 +210,7 @@ To further simplify this expression, we now need to count the number of rainbow 
 
 \begin{remark}
 Bad news : I tried to first understand  how Pr\"{u}fer code works on (non colored) forests rooted in the minimal label of each connected component but no multiplicative formula is known (so the Prufer type proof does not seem to work either).
-We get the sequence \OEIS{A138464}.¨
+We get the sequence \OEIS{A138464}.
 \end{remark}
 
 
