--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3002,307 +3002,56 @@ This is equivalent, via the isomorphism between $\LA$ and $\SU$ diagonals, to th
 
 %%%%%%%%%%%%%%%
 
-\subsection{Matrix and cubical Descriptions}
+\subsubsection{Shift Lattice Structure}
 
-We first recall the alternate descriptions of the $\SUD$ diagonal from \cite{SaneblidzeUmble04} and\cite{saneblidzeComparingDiagonalsAssociahedra2022}, that we would like to transfer to $\LAD$. 
-In particular, we explicitly relate the matrix and cubical descriptions of the $\SUD$ diagonal, to the description of the $\SUD$ diagonal given in \cref{def:classical-SU}.
-\\\\
-We previously saw that SCPs and permutations are in bijection (\cref{def:Strong complementary pairs}). 
-There is also a third equivalent way to encode this data, the \emph{step matrices} of Definition 6 of \cite{SaneblidzeUmble04}.
-Informally, given a permutation $\sigma$, start in the bottom left corner of a matrix, and write increasing sequences vertically, and decreasing sequences horizontally. All other entries are $0$. Here is an example permutation, its SCP, and its step matrix, with all $0$ entries omitted.
-\begin{center}
-\raisebox{3em}{$6524713$}
-$\quad \quad$
-\begin{tikzpicture}[scale=.7]  
-\node (1) at (-1.5, -1) {$256$};
-\node (2) at (-1.5, -2) {$4$};
-\node (3) at (-1.5, -3) {$17$};
-\node (4) at (-1.5, -4) {$3$};
-%
-\node (5) at (1.5, -1) {$6$};
-\node (6) at (1.5, -2) {$5$};
-\node (7) at (1.5, -3) {$247$};
-\node (8) at (1.5, -4) {$13$};
-%
-\draw[thick] (1) to [in=180, out=0, looseness=0](5);
-\draw[thick] (1) to [in=180, out=0, looseness=0](6); 
-\draw[thick] (1) to [in=180, out=0, looseness=0](7); 
-\draw[thick] (2) to [in=180, out=0, looseness=0](7); 
-\draw[thick] (3) to [in=180, out=0, looseness=0](7); 
-\draw[thick] (3) to [in=180, out=0, looseness=0](8); 
-\draw[thick] (4) to [in=180, out=0, looseness=0](8);
-\end{tikzpicture}
-$\quad \quad$
-\raisebox{3em}{
-$
-\begin{blockarray}{ccccc}
-  & \sigma_1 & \sigma_2 & \sigma_3 & \sigma_4  \\
-\begin{block}{c[cccc]}
-\tau_4 &   &   & 1 & 3 \\
-\tau_3 & 2 & 4 & 7  &   \\
-\tau_2 & 5 &   &   &   \\
-\tau_1 & 6 &   &   &   \\
-\end{block}
-\end{blockarray}
-$
-}
-\end{center}
-Given a $l\times k$ matrix $C$ with all non-zero entries drawn without replacement from $[n]$, let $\sigma_i(C)$ denote the non-zero entries of the $i$th column, and $\tau_j(C)$ the non-zero entries of the $(l-j+1)$th row. 
-For example, we labelled the rows and columns of the prior step matrix in this fashion.
-With this identification, we can apply \cref{def:movable-subsets}, to identify $1$-block moveable subsets of the matrix $M$, and we can apply \cref{def:admissible-shift-sequences}, to identify sequences of shifts which are admissible of original type.
-We now define a suitable subset shift action on these matrices.
+\Kurt{Simplify later}
+
 \begin{definition}
-A non-empty set of elements of a matrix $M_i \subset \sigma_i(C)$ (resp. $M_{i}\subset \tau_{i}(C)$) is \emph{$1$-block movable} if
-\begin{enumerate}
-    \item $\min \sigma_i(C) \notin M_i$ (resp. $\min \tau_{i}(C) \notin M_i$), and
-    \item $\min M_i> \max \sigma_{i+1}(C)$ (resp. $\min M_{i}> \max \tau_{i-1}(C)$).
-\end{enumerate}
-The right matrix subset shift operator $R_{M_i}$ shifts the elements of $M_i$ right one column (i.e. if $C_{k,l} \in M_i$ then $(R_{M_i}C)_{k,l+1} = C_{k,l}$), replacing only elements of value $0$, and leaving $0$ elements in their wake.
-The left matrix subset shift operator $L_{M_i}$ shifts the elements of $M_i$ down one row, replacing only elements of value $0$, and leaving $0$ elements in their wake.
+Let $(\sigma,\tau) \in \SUD$.
+\begin{itemize}
+    \item Let $S_{(\sigma,\tau)}^R := \{\rho: R_{\rho}(\sigma,\tau)  \text{ is a well-defined $1$-shift}\}$, and $S_{(\sigma,\tau)}^L := \{\rho: L_{\rho}(\sigma,\tau)  \text{ is a well-defined $1$-shift}\}$.
+    \item For $\rho \in S_{(\sigma,\tau)}^R$ (or $\rho \in S_{(\sigma,\tau)}^L$), let $m_\rho:= \max m$ such that $R_\rho(\sigma,\tau)$ (or $L_{\rho}(\sigma,\tau)$) is a well-defined $m$-shift.
+\end{itemize}
 \end{definition}
+Note $S_{(\sigma,\tau)}^R$ and $S_{(\sigma,\tau)}^L$ may not be disjoint.
+
+\begin{lemma}[$m$-shifts commute] \label{lem:m-shifts commute}
+Let $(\sigma,\tau) \in \SUD$.
+If either side of the following equations are  well-defined sequences of $m_1,m_2$ shift operators, then the other side is a well-defined sequence of $m_2,m_1$ shift operators, and their output is equal.
+\begin{align*}
+    R_{\rho} L_{\rho'}(\sigma,\tau) = L_{\rho'} R_{\rho}(\sigma,\tau), \quad R_{\rho} R_{\rho'}(\sigma,\tau) = R_{\rho'} R_{\rho}(\sigma,\tau), \quad L_{\rho} L_{\rho'}(\sigma,\tau) = L_{\rho'} L_{\rho}(\sigma,\tau)
+\end{align*}
+\end{lemma}
+\begin{proof}
+A $m$-shift $R_{\rho}(\sigma,\tau)$ is defined when $\rho > \max \sigma_{i,i+m}$ (similarly for $L_{\rho}$).
+From \cref{cor:SU-shift-preserves-max}, we know $m$-shifts conserve the maximal elements of paths. 
+As such, we can commute any two shift operators.
+We note that right (or left) shifting the same element $m_1$ steps then $m_2$ steps is the same as shifting it $m_1+m_2$ steps.
+\end{proof}
+
 \begin{proposition}
-The matrix subset shift operators are well-defined.
+Let $(\sigma,\tau)$ be an $SCP$ and 
+\begin{align*}
+    L(\sigma,\tau) := \bigcup_{\mathbf{M}, \mathbf{N}} R_\mathbf{M}(\sigma)\times L_\mathbf{N}(\tau)
+\end{align*}
+where the union is taken over all admissible sequences of $1$-shifts $\textbf{M},\textbf{N}$. 
+Then $L(\sigma,\tau)$ is a bounded lattice such that
+\begin{align*}
+    L(\sigma,\tau) \cong (\prod_{\rho \in S_{(\sigma,\tau)}^R} [m_\rho])\times 
+    (\prod_{\rho \in S_{(\sigma,\tau)}^L} [m_\rho] )
+\end{align*}
+where $[n] = (0<1...<n)$.
 \end{proposition}
+
 \begin{proof}
-We verify the claim that the matrix shift operators never replace non-zero elements.
-It is straightforward to show that this is true when a shift operator is applied to a $SCP$.
-From here we proceed inductively.
-We assume that all prior shift operators have been well-defined, and we then check that applying another valid sequential shift operator is also well-defined.
-Suppose that $M_i$ is $1$-block moveable, and that $R_{M_i}$ is not well-defined as it tries to move a value $m$ into a non-zero matrix entry $n$.
-Then, $n$ must have been placed into that column by a prior left shift operator $L_{N_j}$, and consequently $n>\min N_j > \max \tau_{j-1}> m$.
-However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $M_i$ is not $1$-block moveable, a contradiction.
+
+We identify $(0,0,...,0)$ with the SCP $(\sigma,\tau)$ and every other element $(n_{r_1},...,n_{r_{k_1}}, n_{l_1},...,n_{l_{k_2}})$, with 
+$R^{n_{r_1}}_{\rho_{r_1}}...R^{n_{r_{k_1}}}_{\rho_{r_{k_1}}}
+L^{n_{l_1}}_{\rho_{l_1}}...L^{n_{l_{k_2}}}_{\rho_{l_{k_2}}}(\sigma,\tau)$.
+Given \cref{lem:m-shifts commute}, it is straightforward to confirm that the join (meet) of any two elements is given by their element wise maximum (minimum).
+The maximum element of the lattice is thus given by starting with $(\sigma,\tau)$ and shifting all elements of $S^R_{(\sigma,\tau)}$ ($S^L_{(\sigma,\tau)}$) right (resp. left) by their height.
+
 \end{proof}
-
-
-\begin{definition}[Definition 7. \cite{SaneblidzeUmble04}]
-We define the set of \emph{configuration matrices} $\mathcal{C}$, to be those matrices  corresponding to $SCP$s and those generated by admissible sequences of shifts.
-\end{definition}
-
-\begin{proposition}[\cite{SaneblidzeUmble04}]
-The set of configuration matrices are in bijection with the facets of $\SUD$.
-\end{proposition}
-\begin{proof}
-As configuration matrices have the same recursive description as the original $\SUD$ diagonal (\cref{def:classical-SU)}), and $SCP$s are in bijection with step matrices, the result immediately follows.
-\end{proof}
-
-
-\begin{example}
-Here are some valid subset shifts of the matrix encoding of $6524713$. Every composite of arrows is a valid sequence of shifts.
-\begin{center}
-\begin{tikzcd}
-\begin{bmatrix}
-  &   & 1 & 3 \\
-2 & 4 & 7 &   \\
-5 &   &   &   \\
-6 &   &   &   \\
-\end{bmatrix}
-\arrow[r,"R_{5,6}"]
-&
-\begin{bmatrix}
-  &   & 1 & 3 \\
-2 & 4 & 7 &   \\
-  & 5 &   &   \\
-  & 6 &   &   \\
-\end{bmatrix}
-\end{tikzcd}
-\end{center}
-Note, that $R_5,R_6$ are also valid right shifts of the left matrices.
-\Kurt{Todo.}
-
-\end{example}
-
-
-Ok,
-\begin{itemize}
-    \item In their original paper SU $(C_*(P_{n+1},\triangle_P,\partial)$ is a DG-coalebra (Corollary 1)  
-    \\\\
-    (and it the cellular projection onto the subdivision of the cube induces a DG-coalgebra map)
-    \item $\triangle_P$ is defined in definition 11.
-    \begin{align*}
-        \triangle_P(n+1) = \sum_{F\in C^{q\times n-q+2}} csgn(F)c(F)\otimes r(F)
-    \end{align*}
-    the sum is over the set of configuration matrix.
-    
-\end{itemize}
-
-In \cite{SaneblidzeUmble04} Saneblidze and Umble first identified their diagonal through the following subdivision of the $n$-cube by the permutahedra $P_{n+1}$.
-Let $1$ denote a trivial subdivision of the $0$-cube (a point), then we can subdivide the $n$-cube by weaving $n+1$ through the previous subdivision of the $n-1$-cube, then connecting all vertices by the weak Bruhat order. 
-Here is an illustration of this subdivision for the first few-dimensions.
-We indicate, in bold, a natural inclusion of each $n-1$ cube into the $n$-cube.
-
-\begin{center}
-\begin{tikzcd}[sep=0.3cm]
-\mathbf{1|2} \arrow[r,dash, "12"] & 2|1
-\end{tikzcd}
-$\hookrightarrow$
-\begin{tikzcd}[column sep=0.3cm]
-3|1|2 \arrow[r,dash, "3|12"] \arrow[d,dash, "13|2"]& 3|2|1 \arrow[d,dash, "13|2"]\\
-1|3|2 \arrow[d,dash, "1|23"] & 2|3|1 \arrow[d,dash, "2|13"]\\
-\mathbf{1|2|3} \arrow[r,dash,thick, "12|3"] & \mathbf{2|1|3}
-\end{tikzcd}
-$\hookrightarrow$
-\begin{tikzcd}[sep=0.15cm,scale=0.8]
-& 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 4|2|3|1 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 4|3|2|1 \arrow[dd,dash] \arrow[dl,dash]\\
-4|1|2|3 \arrow [rr,dash] \arrow [dd,dash] & & 4|1|3|2 \arrow[rr,dash] \arrow[dd,dash] & & 4|3|1|2 \arrow[dd,dash]  & \\
-& 2|4|1|3 \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 2|4|3|1  \arrow[dd,dash,dotted] & & 3|4|2|1 \arrow [dl,dash] \arrow[dd,dash]\\
-1|4|2|3 \arrow [rr,dash] \arrow [dd,dash]& & 1|4|3|2  \arrow[dd,dash] & & 3|4|1|2 \arrow[dd,dash]\\
-& 2|1|4|3 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 2|3|4|1 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 3|2|4|1 \arrow[dd,dash] \\
-1|2|4|3 \arrow [dd,dash] & & 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash] & & 3|1|4|2 \arrow[dd,dash] & \\
-& \mathbf{2|1|3|4} \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & \mathbf{2|3|1|4} \arrow [rr,dash,dotted] & & \mathbf{3|2|1|4} \arrow [dl,dash] \\
-\mathbf{1|2|3|4} \arrow [rr,dash] & & \mathbf{1|3|2|4} \arrow [rr,dash] & & \mathbf{3|1|2|4} \\
-\end{tikzcd}
-\end{center}
-To avoid cluttering the diagram, we have only labelled the vertices of the subdivision of cube, but its edges, facets and face are also identified with the expected elements of $P_{n+1}$.
-We note each vertex of the $n-1$ cube produces an edge of the $n$-cube with $n+1$ vertices through,
-\begin{align*}
-    x_1|...|x_n \mapsto (x_1|\dots|x_n|n+1, x_1|\dots|n+1|x_n|,\dots ,n+1|x_1|\dots|x_n)
-\end{align*}
-These successive vertices are totally ordered under the weak-Bruhat order.
-
-\begin{definition}
-Define $I_n$ to be the $n$-cube under this subdivision of $P_{n+1}$. 
-Let $e$ be a cell in $P_{n+1}$ with dimension $|e|$,
-\begin{itemize}
-    \item a \emph{$k$-subdivision cube} of $e$ is a set of faces whose union is a $k$-subcube of $I_n$ for some $k\leq |e|$.
-    \item the set of vertices in $e$ is denoted $\mathcal{V}_e$.
-\end{itemize}
-Let $v \in \mathcal{V}_e$, as this vertex corresponds to a permutation let $(\sigma,\tau)$ be its SCP. 
-\begin{itemize}
-    \item Let $k_1,k_2$ denote the number of blocks in $\sigma,\tau$ respectively.
-    \item Let $(I_{v,1}^{k_1}$, $I_{v,2}^{k_2})$ be a pair of $k_i$-subdivision cubes of $e$ such that
-    \begin{enumerate}
-        \item $k_1+k_2 = |e|$
-        \item Under the weak Bruhat order $\max I_{v,1}^{k_1} = \min I_{v,2}^{k_2} = v$
-    \end{enumerate}
-    \item We denote the set of all such pairs by $e_v$, and denote its unique maximal element by $e_v^*$.
-\end{itemize}
-\end{definition}
-\begin{example}
-In $P_4$ let $e$ be the top-dimensional cell $1234$. Then the following sets of faces are all $k$-division subcubes of $e$
-\begin{align*}
-    \{1234\}, \{1|234\}, \{1|234, 14|23\} \{4|13|2\}, \{1|3|24,1|43|2,14|3|2\}.
-\end{align*}
-The follow two sets of faces are both not $k$-division subcubes of $e$,
-\begin{align*}
-    \{1|234, 14|23,13|24\}, \{1|2|34,1|3|24\}
-\end{align*}
-For $v = 4|1|3|2$, 
-\begin{align*}
-    e_v = \{( \{14|23\},\{4|13|2\}), ( \{1|234, 14|23\},\{4|13|2\}) \}, \text{and, } e_v^* =( \{1|234, 14|23\},\{4|13|2\})
-\end{align*}
-Note there are two elements in $ 14|23 \times 4|13|2, 1|234 \times 4|13|2 \in e_v^*$, an $SCP$ and a right shift of it.
-
-\end{example}
-
-\begin{lemma}
-The unique maximal pair $e_v^*$ is well-defined.
-\end{lemma}
-\begin{proof}
-\Kurt{TODO. }
-\end{proof}
-
-\begin{lemma}[Formula $(3)$ of \cite{saneblidzeComparingDiagonalsAssociahedra2022}]
-Let $e$ be the top-dimensional cell of $P_{n}$, and let $v$ be a permutation of size $n$ and $(\sigma,\tau)$ its SCP.
-Then,
-\begin{align*}
-    e_v^* = \bigcup_{\mathbf{M},\mathbf{N}} R_\mathbf{M}(\sigma) \times L_{\mathbf{N}}(\tau)
-\end{align*}
-where $R$ and $L$ are shift operators, and $\mathbf{M},\mathbf{N}$ are all admissible sequence of shifts of the appropriate type.
-\end{lemma}
-\begin{proof}
-We first observe that the $SCP$ of $v$ is in $e_v^*$.
-
-
-\begin{itemize}
-    \item $SCP$ is in $e_v^*$
-    \item Apply shifts stays within $e_v^*$
-    \item ah 1-shifts are not only a lattice, but a cubical lattice... \Kurt{}
-\end{itemize}
-\end{proof}
-
-\begin{corollary}[Formula (1) and (3) \cite{saneblidzeComparingDiagonalsAssociahedra2022}]
-\begin{align*}
-    \SUD([n]) = \bigcup_{v \in P_n} e_v^*
-\end{align*}
-
-\end{corollary}
-
-\Kurt{So this logic would establish it is a formula, given we know the shift description is a formula. 
-But I don't know follow why it defines a formula independently of this logic.
-I think in the original paper, SU only directly prove the shift formula defines the diagonal...
-So would need to pull back their proof... or give alternate.
-}
-\begin{example}
-Here are two examples shifts illustrated on the subdivision of the cube.
-In the left diagram, the permutation $\mathbf{\blue{4|1|3|2}}$ has $SCP$ $\mathbf{\blue{14|23\times 4|13|2}}$ and right shifts to $\mathbf{\red{1|234\times 4|13|2}}$.
-In the right diagram, the permutation $\mathbf{\blue{3|1|4|2}}$ has $SCP$ $\mathbf{\blue{13|24\times 3|14|2}}$ and left shifts to $\mathbf{\red{13|24\times 43|1|2}}$.
-\begin{center}
-{\footnotesize
-\begin{tikzcd}[sep=0.1cm, scale=0.3]
-& 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 4|2|3|1 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 4|3|2|1 \arrow[dd,dash] \arrow[dl,dash]\\
-4|1|2|3 \arrow [rr,dash] \arrow [dd,dash] & & \mathbf{\blue{4|1|3|2}} \arrow[rr,dash,crossing over, "\mathbf{\blue{4|13|2}}" description] \arrow[dd,dash] & & 4|3|1|2 \arrow[dd,dash]  & \\
-& \blue{\mathbf{14|23}} \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 2|4|3|1  \arrow[dd,dash,dotted] & & 3|4|2|1 \arrow [dl,dash] \arrow[dd,dash]\\
-1|4|2|3 \arrow [rr,dash] \arrow [dd,dash]& & 1|4|3|2  \arrow[dd,dash] & & 3|4|1|2 \arrow[dd,dash]\\
-& 2|1|4|3 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 2|3|4|1 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 3|2|4|1 \arrow[dd,dash] \\
-1|2|4|3 \arrow [dd,dash] \arrow[rr, phantom, "\red{\mathbf{1|234}}" description,crossing over]& & 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash] & & 3|1|4|2 \arrow[dd,dash] & \\
-& 2|1|3|4 \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & 2|3|1|4 \arrow [rr,dash,dotted] & & 3|2|1|4 \arrow [dl,dash] \\
-1|2|3|4 \arrow [rr,dash] & & 1|3|2|4 \arrow [rr,dash] & & 3|1|2|4 \\
-\end{tikzcd}
-}
-\quad
-{\footnotesize
-\begin{tikzcd}[sep=0.1cm, scale=0.3]
-& 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 4|2|3|1 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 4|3|2|1 \arrow[dd,dash] \arrow[dl,dash]\\
-4|1|2|3 \arrow [rr,dash] \arrow [dd,dash] & & 4|1|3|2 \arrow[rr,dash] \arrow[dd,dash] & & 4|3|1|2 \arrow[dd,dash,crossing over, "\mathbf{\red{43|1|2}}" description]  & \\
-& 2|4|1|3 \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 2|4|3|1  \arrow[dd,dash,dotted] & & 3|4|2|1 \arrow [dl,dash] \arrow[dd,dash]\\
-1|4|2|3 \arrow [rr,dash] \arrow [dd,dash]& & 1|4|3|2  \arrow[dd,dash] & & 3|4|1|2 \arrow[dd,dash,crossing over, "\mathbf{\blue{3|14|2}}" description]\\
-& 2|1|4|3 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 2|3|4|1 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 3|2|4|1 \arrow[dd,dash] \\
-1|2|4|3 \arrow [dd,dash] & & 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash] & & \mathbf{\blue{3|1|4|2}} \arrow[dd,dash] & \\
-& 2|1|3|4 \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & \mathbf{\blue{13|24}} \arrow [rr,dash,dotted] & & 3|2|1|4 \arrow [dl,dash] \\
-1|2|3|4 \arrow [rr,dash] & & 1|3|2|4 \arrow [rr,dash] & & 3|1|2|4 \\
-\end{tikzcd}
-}
-\end{center}
-\end{example}
-
-
-
-To construct the $LA$ subdivision of the cube we first make a useful observation.
-\begin{lemma}
-The following square commutes,
-\begin{center}
-\begin{tikzcd}
-SCP \arrow[r,"t(r\times r)",leftrightarrow] \arrow[d,leftrightarrow] & SCP \arrow[d,leftrightarrow]\\
-\mathbb{S}_n \arrow[r,"r",leftrightarrow] & \mathbb{S}_n
-\end{tikzcd}
-\end{center}
-Where the vertical arrows are 'read the right-side blocks to identify the permutation'.
-\end{lemma}
-
-\begin{center}
-\begin{tikzcd}[sep=0.3cm]
-\mathbf{2|1} \arrow[r,dash, "12"] & 1|2
-\end{tikzcd}
-$\hookrightarrow$
-\begin{tikzcd}[column sep=0.3cm]
-1|3|2 \arrow[r,dash, "1|23"] \arrow[d,dash, "13|2"]& 1|2|3 \arrow[d,dash, "13|2"]\\
-3|1|2 \arrow[d,dash, "3|12"] & 2|1|3 \arrow[d,dash, "2|13"]\\
-\mathbf{3|2|1} \arrow[r,dash,thick, "23|1"] & \mathbf{2|3|1}
-\end{tikzcd}
-$\hookrightarrow$
-\begin{tikzcd}[sep=0.15cm,scale=0.8]
-& 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 1|3|2|4 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 1|2|3|4 \arrow[dd,dash] \arrow[dl,dash]\\
-1|4|3|2 \arrow [rr,dash] \arrow [dd,dash] & & 1|4|2|3 \arrow[rr,dash] \arrow[dd,dash] & & 1|2|4|3 \arrow[dd,dash]  & \\
-& 3|1|4|2 \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 3|1|2|4  \arrow[dd,dash,dotted] & & 2|1|3|4 \arrow [dl,dash] \arrow[dd,dash]\\
-4|1|3|2 \arrow [rr,dash] \arrow [dd,dash]& & 4|1|2|3  \arrow[dd,dash] & & 2|1|4|3 \arrow[dd,dash]\\
-& 3|4|1|2 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 3|2|1|4 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 2|3|1|4 \arrow[dd,dash] \\
-4|3|1|2 \arrow [dd,dash] & & 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash] & & 2|4|1|3 \arrow[dd,dash] & \\
-& \mathbf{3|4|2|1} \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & \mathbf{3|2|4|1} \arrow [rr,dash,dotted] & & \mathbf{2|3|4|1} \arrow [dl,dash] \\
-\mathbf{4|3|2|1} \arrow [rr,dash] & & \mathbf{4|2|3|1} \arrow [rr,dash] & & \mathbf{2|4|3|1} \\
-\end{tikzcd}
-\end{center}
-
-%%%%%%%%%%%%%%%
 
 \subsection{Shifts Under the Face Poset Isomorphism}
 
@@ -3442,9 +3191,9 @@ $\xrightarrow{t(r\times r)}$
 \end{center}
 We now illustrate all possible $\LA$ $1$-shifts of the left $\SCP$ and all possible $\SU$ $1$-shifts of the right $\SCP$. 
 We first display how the $\LA$ left shifts act on $\sigma$, and the $\SU$ left shifts act on $\tau'$.
-The $LA$ shifts have been drawn so the leftmost arrow shifts the smallest element, and the $SU$ shifts have been drawn so the leftmost arrow shifts the largest element.
-As such, the face poset isomorphism $t(r\times r)$ directly translates one diagram to other.
-The specific element being shifted can be inferred by by the source and target of the arrow.
+The $LA$ shifts have been drawn so that the leftmost arrow shifts the smallest element, and the $SU$ shifts have been drawn so that the leftmost arrow shifts the largest element.
+As such, the face poset isomorphism $t(r\times r)$ directly translates one diagram to the other.
+The specific element being shifted can be inferred by the source and target of the arrow.
 \begin{center}
 {\small
 \begin{tikzcd}
@@ -3545,6 +3294,322 @@ $256|4|17|3 \xrightarrow{R_5} 26|45|17|3$.
 It was observed in ... that the $LA$ and $SU$ diagonals coincided up until $n=3$, however we just identified that they dua
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\subsection{Matrix and cubical Descriptions}
+
+We first recall the alternate descriptions of the $\SUD$ diagonal from \cite{SaneblidzeUmble04} and\cite{saneblidzeComparingDiagonalsAssociahedra2022}, that we would like to transfer to $\LAD$. 
+In particular, we explicitly relate the matrix and cubical descriptions of the $\SUD$ diagonal, to the description of the $\SUD$ diagonal given in \cref{def:classical-SU}.
+\\\\
+We previously saw that SCPs and permutations are in bijection (\cref{def:Strong complementary pairs}). 
+There is also a third equivalent way to encode this data, the \emph{step matrices} of Definition 6 of \cite{SaneblidzeUmble04}.
+Informally, given a permutation $\sigma$, start in the bottom left corner of a matrix, and write increasing sequences vertically, and decreasing sequences horizontally. All other entries are $0$. Here is an example permutation, its SCP, and its step matrix, with all $0$ entries omitted.
+\begin{center}
+\raisebox{3em}{$6524713$}
+$\quad \quad$
+\begin{tikzpicture}[scale=.7]  
+\node (1) at (-1.5, -1) {$256$};
+\node (2) at (-1.5, -2) {$4$};
+\node (3) at (-1.5, -3) {$17$};
+\node (4) at (-1.5, -4) {$3$};
+%
+\node (5) at (1.5, -1) {$6$};
+\node (6) at (1.5, -2) {$5$};
+\node (7) at (1.5, -3) {$247$};
+\node (8) at (1.5, -4) {$13$};
+%
+\draw[thick] (1) to [in=180, out=0, looseness=0](5);
+\draw[thick] (1) to [in=180, out=0, looseness=0](6); 
+\draw[thick] (1) to [in=180, out=0, looseness=0](7); 
+\draw[thick] (2) to [in=180, out=0, looseness=0](7); 
+\draw[thick] (3) to [in=180, out=0, looseness=0](7); 
+\draw[thick] (3) to [in=180, out=0, looseness=0](8); 
+\draw[thick] (4) to [in=180, out=0, looseness=0](8);
+\end{tikzpicture}
+$\quad \quad$
+\raisebox{3em}{
+$
+\begin{blockarray}{ccccc}
+  & \sigma_1 & \sigma_2 & \sigma_3 & \sigma_4  \\
+\begin{block}{c[cccc]}
+\tau_4 &   &   & 1 & 3 \\
+\tau_3 & 2 & 4 & 7  &   \\
+\tau_2 & 5 &   &   &   \\
+\tau_1 & 6 &   &   &   \\
+\end{block}
+\end{blockarray}
+$
+}
+\end{center}
+Given a $l\times k$ matrix $C$ with all non-zero entries drawn without replacement from $[n]$, let $\sigma_i(C)$ denote the non-zero entries of the $i$th column, and $\tau_j(C)$ the non-zero entries of the $(l-j+1)$th row. 
+For example, we labelled the rows and columns of the prior step matrix in this fashion.
+With this identification, we can apply \cref{def:movable-subsets}, to identify $1$-block moveable subsets of the matrix $M$, and we can apply \cref{def:admissible-shift-sequences}, to identify sequences of shifts which are admissible of original type.
+We now define a suitable subset shift action on these matrices.
+\begin{definition}
+A non-empty set of elements of a matrix $M_i \subset \sigma_i(C)$ (resp. $M_{i}\subset \tau_{i}(C)$) is \emph{$1$-block movable} if
+\begin{enumerate}
+    \item $\min \sigma_i(C) \notin M_i$ (resp. $\min \tau_{i}(C) \notin M_i$), and
+    \item $\min M_i> \max \sigma_{i+1}(C)$ (resp. $\min M_{i}> \max \tau_{i-1}(C)$).
+\end{enumerate}
+The right matrix subset shift operator $R_{M_i}$ shifts the elements of $M_i$ right one column (i.e. if $C_{k,l} \in M_i$ then $(R_{M_i}C)_{k,l+1} = C_{k,l}$), replacing only elements of value $0$, and leaving $0$ elements in their wake.
+The left matrix subset shift operator $L_{M_i}$ shifts the elements of $M_i$ down one row, replacing only elements of value $0$, and leaving $0$ elements in their wake.
+\end{definition}
+\begin{proposition}
+The matrix subset shift operators are well-defined.
+\end{proposition}
+\begin{proof}
+We verify the claim that the matrix shift operators never replace non-zero elements.
+It is straightforward to show that this is true when a shift operator is applied to a $SCP$.
+From here we proceed inductively.
+We assume that all prior shift operators have been well-defined, and we then check that applying another valid sequential shift operator is also well-defined.
+Suppose that $M_i$ is $1$-block moveable, and that $R_{M_i}$ is not well-defined as it tries to move a value $m$ into a non-zero matrix entry $n$.
+Then, $n$ must have been placed into that column by a prior left shift operator $L_{N_j}$, and consequently $n>\min N_j > \max \tau_{j-1}> m$.
+However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $M_i$ is not $1$-block moveable, a contradiction.
+\end{proof}
+
+
+\begin{definition}[Definition 7. \cite{SaneblidzeUmble04}]
+We define the set of \emph{configuration matrices} $\mathcal{C}$, to be those matrices  corresponding to $SCP$s and those generated by admissible sequences of shifts.
+\end{definition}
+
+\begin{proposition}[\cite{SaneblidzeUmble04}]
+The set of configuration matrices are in bijection with the facets of $\SUD$.
+\end{proposition}
+\begin{proof}
+As configuration matrices have the same recursive description as the original $\SUD$ diagonal (\cref{def:classical-SU)}), and $SCP$s are in bijection with step matrices, the result immediately follows.
+\end{proof}
+
+
+\begin{example}
+Here are some valid subset shifts of the matrix encoding of $6524713$. Every composite of arrows is a valid sequence of shifts.
+\begin{center}
+\begin{tikzcd}
+\begin{bmatrix}
+  &   & 1 & 3 \\
+2 & 4 & 7 &   \\
+5 &   &   &   \\
+6 &   &   &   \\
+\end{bmatrix}
+\arrow[r,"R_{5,6}"]
+&
+\begin{bmatrix}
+  &   & 1 & 3 \\
+2 & 4 & 7 &   \\
+  & 5 &   &   \\
+  & 6 &   &   \\
+\end{bmatrix}
+\end{tikzcd}
+\end{center}
+Note, that $R_5,R_6$ are also valid right shifts of the left matrices.
+\Kurt{Todo.}
+
+\end{example}
+
+In \cite{SaneblidzeUmble04} Saneblidze and Umble first identified their diagonal through the following subdivision of the $n$-cube by the permutahedra $P_{n+1}$.
+Let $1$ denote a trivial subdivision of the $0$-cube (a point), then we can subdivide the $n$-cube by weaving $n+1$ through the previous subdivision of the $n-1$-cube, then connecting all vertices by the weak Bruhat order. 
+Here is an illustration of this subdivision for the first few-dimensions.
+We indicate, in bold, a natural inclusion of each $n-1$ cube into the $n$-cube.
+
+\begin{center}
+\begin{tikzcd}[sep=0.3cm]
+\mathbf{1|2} \arrow[r,dash, "12"] & 2|1
+\end{tikzcd}
+$\hookrightarrow$
+\begin{tikzcd}[column sep=0.3cm]
+3|1|2 \arrow[r,dash, "3|12"] \arrow[d,dash, "13|2"]& 3|2|1 \arrow[d,dash, "13|2"]\\
+1|3|2 \arrow[d,dash, "1|23"] & 2|3|1 \arrow[d,dash, "2|13"]\\
+\mathbf{1|2|3} \arrow[r,dash,thick, "12|3"] & \mathbf{2|1|3}
+\end{tikzcd}
+$\hookrightarrow$
+\begin{tikzcd}[sep=0.15cm,scale=0.8]
+& 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 4|2|3|1 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 4|3|2|1 \arrow[dd,dash] \arrow[dl,dash]\\
+4|1|2|3 \arrow [rr,dash] \arrow [dd,dash] & & 4|1|3|2 \arrow[rr,dash] \arrow[dd,dash] & & 4|3|1|2 \arrow[dd,dash]  & \\
+& 2|4|1|3 \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 2|4|3|1  \arrow[dd,dash,dotted] & & 3|4|2|1 \arrow [dl,dash] \arrow[dd,dash]\\
+1|4|2|3 \arrow [rr,dash] \arrow [dd,dash]& & 1|4|3|2  \arrow[dd,dash] & & 3|4|1|2 \arrow[dd,dash]\\
+& 2|1|4|3 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 2|3|4|1 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 3|2|4|1 \arrow[dd,dash] \\
+1|2|4|3 \arrow [dd,dash] & & 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash] & & 3|1|4|2 \arrow[dd,dash] & \\
+& \mathbf{2|1|3|4} \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & \mathbf{2|3|1|4} \arrow [rr,dash,dotted] & & \mathbf{3|2|1|4} \arrow [dl,dash] \\
+\mathbf{1|2|3|4} \arrow [rr,dash] & & \mathbf{1|3|2|4} \arrow [rr,dash] & & \mathbf{3|1|2|4} \\
+\end{tikzcd}
+\end{center}
+To avoid cluttering the diagram, we have only labelled the vertices of the subdivision of cube, but its edges, facets and face are also identified with the expected elements of $P_{n+1}$.
+We note each vertex of the $n-1$ cube produces an edge of the $n$-cube with $n+1$ vertices through,
+\begin{align*}
+    x_1|...|x_n \mapsto (x_1|\dots|x_n|n+1, x_1|\dots|n+1|x_n|,\dots ,n+1|x_1|\dots|x_n)
+\end{align*}
+These successive vertices are totally ordered under the weak-Bruhat order.
+
+\begin{definition} \label{def:Subdivisions}
+Define $I_{n-1}$ to be the $n-1$-cube under this subdivision of $P_{n}$. 
+Let $e$ be a cell in $P_{n}$ with dimension $|e|$,
+\begin{itemize}
+    \item a \emph{$k$-subdivision cube} of $e$ is a set of faces whose union is a $k$-subcube of $I_{n-1}$ for some $k\leq |e|$.
+    \item the set of vertices in $e$ is denoted $\mathcal{V}_e$.
+\end{itemize}
+Let $v \in \mathcal{V}_e$, as this vertex corresponds to a permutation let $(\sigma,\tau)$ be its SCP. 
+\begin{itemize}
+    \item Let $k_1,k_2$ denote the number of blocks in $\sigma,\tau$ respectively.
+    \item Let $(I_{v,1}^{k_1}$, $I_{v,2}^{k_2})$ be a pair of $k_i$-subdivision cubes of $e$ such that
+    \begin{enumerate}
+        \item $k_1+k_2 = |e|$
+        \item Under the weak Bruhat order $\max I_{v,1}^{k_1} = \min I_{v,2}^{k_2} = v$
+    \end{enumerate}
+    \item We denote the set of all such pairs by $e_v$, and denote its unique maximal \Kurt{... hmmm well union of all, but probably better descs} element by $e_v^*$.
+\end{itemize}
+\end{definition}
+\begin{example}
+Here is an example that is directly verifiable from the diagram of $I_3$ above.
+In $P_4$, let $e$ be the top-dimensional cell $1234$. Then the following sets of faces are all $k$-subdivision cubes of $e$
+\begin{align*}
+    \{1234\}, \{1|234\}, \{1|234, 14|23\} \{4|13|2\}, \{1|3|24,1|43|2,14|3|2\}.
+\end{align*}
+The follow two sets of faces are both not $k$-subdivision cubes of $e$,
+\begin{align*}
+    \{1|234, 14|23,13|24\}, \{1|2|34,1|3|24\}
+\end{align*}
+For $v = 4|1|3|2$, 
+\begin{align*}
+    e_v = \{( \{14|23\},\{4|13|2\}), ( \{1|234, 14|23\},\{4|13|2\}) \}, \text{and, } e_v^* =( \{1|234, 14|23\},\{4|13|2\})
+\end{align*}
+Note there are two elements in $\blue{\mathbf{14|23}}$$\times\blue{\mathbf{4|13|2}}, \red{\mathbf{1|234}}$$\times\blue{\mathbf{4|13|2}}$$ \in e_v^*$, an $SCP$ and a right shift of it.
+Similarly, for $v=3|1|4|2$, we compute that there are two elements $\mathbf{\blue{13|24}}$$\times \mathbf{\blue{3|14|2}},\mathbf{\blue{13|24}}$$\times \mathbf{\red{43|1|2}}\in e_v^*$, an SCP and its left shift.
+These are illustrated below,
+\begin{center}
+{\footnotesize
+\begin{tikzcd}[sep=0.1cm, scale=0.3]
+& 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 4|2|3|1 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 4|3|2|1 \arrow[dd,dash] \arrow[dl,dash]\\
+4|1|2|3 \arrow [rr,dash] \arrow [dd,dash] & & \mathbf{\blue{4|1|3|2}} \arrow[rr,dash,crossing over, "\mathbf{\blue{4|13|2}}" description] \arrow[dd,dash] & & 4|3|1|2 \arrow[dd,dash]  & \\
+& \blue{\mathbf{14|23}} \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 2|4|3|1  \arrow[dd,dash,dotted] & & 3|4|2|1 \arrow [dl,dash] \arrow[dd,dash]\\
+1|4|2|3 \arrow [rr,dash] \arrow [dd,dash]& & 1|4|3|2  \arrow[dd,dash] & & 3|4|1|2 \arrow[dd,dash]\\
+& 2|1|4|3 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 2|3|4|1 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 3|2|4|1 \arrow[dd,dash] \\
+1|2|4|3 \arrow [dd,dash] \arrow[rr, phantom, "\red{\mathbf{1|234}}" description,crossing over]& & 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash] & & 3|1|4|2 \arrow[dd,dash] & \\
+& 2|1|3|4 \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & 2|3|1|4 \arrow [rr,dash,dotted] & & 3|2|1|4 \arrow [dl,dash] \\
+1|2|3|4 \arrow [rr,dash] & & 1|3|2|4 \arrow [rr,dash] & & 3|1|2|4 \\
+\end{tikzcd}
+}
+\quad
+{\footnotesize
+\begin{tikzcd}[sep=0.1cm, scale=0.3]
+& 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 4|2|3|1 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 4|3|2|1 \arrow[dd,dash] \arrow[dl,dash]\\
+4|1|2|3 \arrow [rr,dash] \arrow [dd,dash] & & 4|1|3|2 \arrow[rr,dash] \arrow[dd,dash] & & 4|3|1|2 \arrow[dd,dash,crossing over, "\mathbf{\red{43|1|2}}" description]  & \\
+& 2|4|1|3 \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 2|4|3|1  \arrow[dd,dash,dotted] & & 3|4|2|1 \arrow [dl,dash] \arrow[dd,dash]\\
+1|4|2|3 \arrow [rr,dash] \arrow [dd,dash]& & 1|4|3|2  \arrow[dd,dash] & & 3|4|1|2 \arrow[dd,dash,crossing over, "\mathbf{\blue{3|14|2}}" description]\\
+& 2|1|4|3 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 2|3|4|1 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 3|2|4|1 \arrow[dd,dash] \\
+1|2|4|3 \arrow [dd,dash] & & 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash] & & \mathbf{\blue{3|1|4|2}} \arrow[dd,dash] & \\
+& 2|1|3|4 \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & \mathbf{\blue{13|24}} \arrow [rr,dash,dotted] & & 3|2|1|4 \arrow [dl,dash] \\
+1|2|3|4 \arrow [rr,dash] & & 1|3|2|4 \arrow [rr,dash] & & 3|1|2|4 \\
+\end{tikzcd}
+}
+\end{center}
+\end{example}
+
+\begin{lemma}
+
+The set of $k$-subdivision cubes of $e$ with a unique maximal vertex is a bounded lattice.
+\end{lemma}
+\begin{proof}
+Each $k$-subdivision cube has a minimal and maximal vertex under the weak Bruhat order.
+Given two $k$-subdivision cubes $x,y$ with the same maximal vertex $v$, we define the meet of $x\land y$ to be their intersection.
+We define the join $x \lor y$ to be the unique $k$ subdivision cube with maximal vertex $v$ and minimal vertex given by taking the join of the minimal vertices of $x$ and $y$ under weak Bruhat lattice.
+\begin{itemize}
+    \item Something like this is true, but might not need...
+\end{itemize}
+\end{proof}
+
+\begin{lemma}
+The unique maximal pair $e_v^*$ is well-defined, and has the following formula. Let $(\sigma,\tau)$ be the SCP of the vertex $v\in P_n$, then 
+\begin{align*}
+    e_v^* = L(e_v^*) \times R(e_v^*) := [\overrightarrow{\sigma}, \sigma] \times [\tau, \overleftarrow{\tau}]
+\end{align*}
+where $[x,y]$ is the interval of the permutahedra of faces of the same dimension, and 
+\begin{align*}
+   \overrightarrow{\sigma} := \overrightarrow{s_n}\overrightarrow{s_{n-1}}...\overrightarrow{s_1}(v),\quad 
+   \overleftarrow{\tau} := \overleftarrow{s_n}\overleftarrow{s_{n-1}}...\overleftarrow{s_1}(v)
+\end{align*}
+The operators $\overleftarrow{s_i}, \overrightarrow{s_i}$ each shift the element $i$ to the left/right until there are no further blocks, or the next block contains an element larger than $i$.
+\end{lemma}
+\begin{proof}
+If the SCP $(\sigma,\tau)$ has $k_1,k_2$ blocks respectively, then $([\overrightarrow{\sigma}, \sigma], [\tau, \overleftarrow{\tau}])$ are a pair of subdivision cubes of $P_{n}$ which meet conditions $1$ and $2$ of \cref{def:Subdivisions} by construction. 
+The fact that we meet conditions $1$ and $2$ is clear, to see that they are subdivision cubes
+\begin{itemize}
+    \item 
+\end{itemize}
+
+
+\end{proof}
+
+\begin{example}
+For the SCP $ 13|247|5|6 \times 3|17|4|156$ of \cref{ex:shift translation by theta}. We directly compute $R(e_v^*)$ to be the cube..., and $L(e_v^*)$ to be the square...
+\end{example}
+
+\begin{lemma}[Formula $(3)$ of \cite{saneblidzeComparingDiagonalsAssociahedra2022}]
+Let $e$ be the top-dimensional cell of $P_{n}$, and let $v$ be a permutation of size $n$ and $(\sigma,\tau)$ its SCP.
+Then,
+\begin{align*}
+    e_v^* = \bigcup_{\mathbf{M},\mathbf{N}} R_\mathbf{M}(\sigma) \times L_{\mathbf{N}}(\tau)
+\end{align*}
+where $R$ and $L$ are shift operators, and $\mathbf{M},\mathbf{N}$ are all admissible sequence of shifts of the appropriate type.
+\end{lemma}
+\begin{proof}
+The reason this works 
+\begin{itemize}
+    \item $\overrightarrow{\sigma}$ is $\sigma$ after right shifting to maximal height....
+\end{itemize}
+\end{proof}
+
+\begin{corollary}[Formula (1) and (3) \cite{saneblidzeComparingDiagonalsAssociahedra2022}]
+\begin{align*}
+    \SUD([n]) = \bigcup_{v \in P_n} e_v^*
+\end{align*}
+
+\end{corollary}
+
+\Kurt{So this logic would establish it is a formula, given we know the shift description is a formula. 
+But I don't know follow why it defines a formula independently of this logic.
+I think in the original paper, SU only directly prove the shift formula defines the diagonal...
+So would need to pull back their proof... or give alternate.
+}
+
+\Kurt{What do the IJ conditions correspond to on the cube?}
+
+
+
+To construct the $LA$ subdivision of the cube we first make a useful observation.
+\begin{lemma}
+The following square commutes,
+\begin{center}
+\begin{tikzcd}
+SCP \arrow[r,"t(r\times r)",leftrightarrow] \arrow[d,leftrightarrow] & SCP \arrow[d,leftrightarrow]\\
+\mathbb{S}_n \arrow[r,"r",leftrightarrow] & \mathbb{S}_n
+\end{tikzcd}
+\end{center}
+Where the vertical arrows are 'read the right-side blocks to identify the permutation'.
+\end{lemma}
+
+\begin{center}
+\begin{tikzcd}[sep=0.3cm]
+\mathbf{2|1} \arrow[r,dash, "12"] & 1|2
+\end{tikzcd}
+$\hookrightarrow$
+\begin{tikzcd}[column sep=0.3cm]
+1|3|2 \arrow[r,dash, "1|23"] \arrow[d,dash, "13|2"]& 1|2|3 \arrow[d,dash, "13|2"]\\
+3|1|2 \arrow[d,dash, "3|12"] & 2|1|3 \arrow[d,dash, "2|13"]\\
+\mathbf{3|2|1} \arrow[r,dash,thick, "23|1"] & \mathbf{2|3|1}
+\end{tikzcd}
+$\hookrightarrow$
+\begin{tikzcd}[sep=0.15cm,scale=0.8]
+& 1|3|4|2 \arrow[rr,dash] \arrow[dd,dash,dotted] \arrow[dl,dash] & & 1|3|2|4 \arrow [dd, dash,dotted] \arrow[rr,dash] & & 1|2|3|4 \arrow[dd,dash] \arrow[dl,dash]\\
+1|4|3|2 \arrow [rr,dash] \arrow [dd,dash] & & 1|4|2|3 \arrow[rr,dash] \arrow[dd,dash] & & 1|2|4|3 \arrow[dd,dash]  & \\
+& 3|1|4|2 \arrow [rr,dash,dotted] \arrow[dd,dash,dotted]  & & 3|1|2|4  \arrow[dd,dash,dotted] & & 2|1|3|4 \arrow [dl,dash] \arrow[dd,dash]\\
+4|1|3|2 \arrow [rr,dash] \arrow [dd,dash]& & 4|1|2|3  \arrow[dd,dash] & & 2|1|4|3 \arrow[dd,dash]\\
+& 3|4|1|2 \arrow[dd,dash,dotted] \arrow[dl,dash,dotted] & & 3|2|1|4 \arrow [dd, dash,dotted] \arrow [rr, dash,dotted] & & 2|3|1|4 \arrow[dd,dash] \\
+4|3|1|2 \arrow [dd,dash] & & 4|2|1|3 \arrow[rr,dash] \arrow[dd,dash] & & 2|4|1|3 \arrow[dd,dash] & \\
+& \mathbf{3|4|2|1} \arrow [rr,dash,dotted] \arrow [dl,dash,dotted] & & \mathbf{3|2|4|1} \arrow [rr,dash,dotted] & & \mathbf{2|3|4|1} \arrow [dl,dash] \\
+\mathbf{4|3|2|1} \arrow [rr,dash] & & \mathbf{4|2|3|1} \arrow [rr,dash] & & \mathbf{2|4|3|1} \\
+\end{tikzcd}
+\end{center}
+
+%%%%%%%%%%%%%%%
 
 \section{Topological operadic structures}
 
