--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1222,6 +1222,8 @@ which vanishes by~\eqref{eq:diff}.
 
 \subsection{Cellular diagonals for polytopes}
 
+\vincent{Tell somewhere that the faces of the diagonal are some of the pairs~$(F,G)$ with $\max(F) \le \min(G)$, but not all. One of the first polytopes for which the magical formula does not hold.}
+
 The usual \emph{thin diagonal} of a topological space $X$ is the map $\Delta : X \to X \times X$ defined by $\Delta(x):=(x,x)$ for all $x \in X$.
 
 \begin{definition}[Cellular diagonal]
@@ -1544,6 +1546,8 @@ Applying this Theorem to $P$ the permutahedron, we obtain the following.
 \begin{proof}
     A choice of diagonal is given by a choice of vector in a chamber of $\mathcal{H}_P$, two vectors living in the same chamber inducing the same diagonal \cite[Proposition 1.23]{LA21}.
 \end{proof}
+
+\vincent{Here, we need to treat all diagonals. Each choice of region in the fundamental hyperplane arrangement gives an orientation of both partitions of a partition forest. We need to explicitly describe this orientation.}
 
 Let us now recall the specific choice of chambers from \cite[Theorem 3.16]{LA21}.
 
@@ -2254,6 +2258,8 @@ As a consequence, all strong complementary pairs are in both $\LAD$ and $\SUD$.
 The path description of $(\sigma,\tau)$ is a straightforward observation. 
 Since the minima of these paths are traversed from left to right, and the maxima from right to left, \cref{prop:LAD-ordered-EC} implies that strong complementary partitions are in both $\LAD$ and $\SUD$.
 \end{proof}
+
+\vincent{SCP corresponds to pairs~$(F,G)$ with $\max(F) = \min(G)$.}
 
 %%%%%%%%%%%%%%%
 
